# test_cmake

./: CMakeLists.txt  README.md
app/: main.cpp  version.hpp.in
src/: hello.cpp  hello.hpp
test/: test.cpp
